--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -36,7 +36,8 @@ a{
 
     .col{
         &:first-child{
-            width: 300px;
+            height: 100%;
+            width: 50%;
         }
        
         img{
@@ -48,39 +49,40 @@ a{
         &:last-child{
             display: flex;
             flex-direction: column;
-            justify-content: space-around;
-            width: 300px;
-            padding: 32px;
+            justify-content: space-between;
+            height: calc(100% - 4rem);
+            width: calc(50% - 4rem);
+            padding: 2rem;
         }
 
         span{
             text-transform: uppercase;
-            letter-spacing: 5px;
+            letter-spacing: 0.31rem;
             font-family: 'Montserrat', sans-serif;
             font-weight: 500;
-            font-size: 12px;
+            font-size: .75rem;
             color: $dark-grayish-blue;
         }
 
         h1{
             font-family: 'Fraunces', serif;
             font-weight: 700;
-            font-size: 32px;
-            line-height: 32px;
+            font-size: 2rem;
+            line-height: 2rem;
             color: $very-dark-blue;
         }
 
         p{
             font-family: 'Montserrat', sans-serif;
             font-weight: 500;
-            font-size: 14px;
-            line-height: 23px;
+            font-size: .87rem;
+            line-height: 1.43rem;
             color: $dark-grayish-blue;
         }
 
         .row:nth-last-child(2){
             display: flex;
-            gap: 19px;
+            gap: 1.18rem;
             align-items: center;
         }
     }
@@ -89,14 +91,14 @@ a{
 .price-active{
     font-family: 'Fraunces', serif;
     font-weight: 700;
-    font-size: 32px;
+    font-size: 2rem;
     color: $dark-cyan;
 }
 
 .price-passive{
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
-    font-size: 13px;
+    font-size: .81rem;
     color: $dark-grayish-blue;
     text-decoration: line-through;
 }
@@ -108,7 +110,7 @@ a{
     border-radius: 8px;
     background-color: $dark-cyan;
     width: 100%;
-    height: 40px;
+    height: 2.5rem;
     &:hover{
         background-color: #1A4032;
     }
@@ -117,16 +119,72 @@ a{
 .btn-link{
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
-    font-size: 14px;
-    line-height: 16px;
+    font-size: .87rem;
+    line-height: 2rem;
     color: $white;
     text-align: center;
 
     &::before{
         content:url("./images/icon-cart.svg");
-        margin-right:11px;
+        margin-right: .77rem;
         padding: 0;
-        width: 16px;
-        height: 16px;
+        width: 1rem;
+        height: 1rem;
+    }
+}
+
+@media (max-width: 610px){
+    :root{
+        font-size: 14px;
+    }
+    .container{
+        height: 60vh;
+        width: 80vw;
+        
+        .col{
+            &:first-child{
+                height: 100%;
+                width: 50%;
+                overflow: hidden;
+            }
+
+            &:last-child{
+                height: calc(100% - 2rem);
+                width: calc(50% - 2rem);
+            }
+        }
+    }
+}
+
+@media (max-width: 415px){
+    :root{
+        font-size: 16px;
+    }
+    .container{
+        height: calc(100vh - 56px);
+        width: calc(100vw - 32px);
+        margin: 28px 16px;
+        flex-direction: column;
+
+        .col{
+            
+            &:first-child{
+                height: 46.16%;
+                width: 100%;
+                overflow: hidden;
+
+                img{
+                    width: 100%;
+                    border-radius: 10px 10px 0 0;
+                    object-fit: cover;
+                }
+            }
+
+            &:last-child{
+                height: calc(60% - 48px);
+                width: calc(100% - 48px);
+                padding: 24px;
+            }
+        }
     }
 }
